--- a/arch/arm/configs/jfve_eur_defconfig
+++ b/arch/arm/configs/jfve_eur_defconfig
@@ -23,7 +23,7 @@ CONFIG_DIAGFWD_REMOTE_PROC_TEMP=y
 #
 # Qualcomm Atheros Prima WLAN module
 #
-CONFIG_PRIMA_WLAN=y
+CONFIG_PRIMA_WLAN=m
 CONFIG_PRIMA_WLAN_BTAMP=y
 CONFIG_PRIMA_WLAN_LFR=y
 CONFIG_PRIMA_WLAN_OKC=y
