--- a/arch/arm/configs/0hulk_TW_defconfig
+++ b/arch/arm/configs/0hulk_TW_defconfig
@@ -6,9 +6,9 @@ CONFIG_LOCALVERSION="-Hulk-Kernel_TW444-V1.0.1"
 CONFIG_GLOVE_TOUCH=y
 CONFIG_ASYNC_FSYNC=y
 CONFIG_F2FS_FS=y
-# CONFIG_F2FS_STAT_FS is not set
+CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_FS_XATTR=y
-# CONFIG_F2FS_FS_POSIX_ACL is not set
+CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
 CONFIG_FORCE_FAST_CHARGE=y
