--- a/arch/arm/configs/0hulk_TW_defconfig
+++ b/arch/arm/configs/0hulk_TW_defconfig
@@ -3,6 +3,7 @@ CONFIG_LOCALVERSION="-Hulk-Kernel_TW444-V1.0.1"
 
 # Hulk-Kernel
 # CONFIG_GED_BUILD is not set
+CONFIG_GLOVE_TOUCH=y
 CONFIG_ASYNC_FSYNC=y
 CONFIG_F2FS_FS=y
 # CONFIG_F2FS_STAT_FS is not set
