--- a/0hulk_TW_defconfig
+++ b/0hulk_TW_defconfig
@@ -1,8 +1,9 @@
-CONFIG_LOCALVERSION="-Hulk-Kernel_TW-V1.0.1"
+CONFIG_LOCALVERSION="-Hulk-Kernel_TW-1.1"
 # CONFIG_LOCALVERSION_AUTO is not set
 
 # Hulk-Kernel
 # CONFIG_GED_BUILD is not set
+CONFIG_GLOVE_TOUCH=y
 CONFIG_ASYNC_FSYNC=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_STAT_FS=y
@@ -35,6 +36,7 @@ CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_TEST is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+CONFIG_SOUND_CONTROL_HAX_GPL=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
@@ -103,6 +105,10 @@ CONFIG_HAVE_KERNEL_LZO=y
 CONFIG_KERNEL_XZ=y
 # CONFIG_KERNEL_LZO is not set
 CONFIG_ANDROID_LMK_ADJ_RBTREE=y
+CONFIG_GENERIC_STRNCPY_FROM_USER=y
+CONFIG_GENERIC_STRNLEN_USER=y
+CONFIG_GENERIC_SMP_IDLE_THREAD=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 # kexec hardboot support
 CONFIG_KEXEC=y
