--- a/arch/arm/configs/0hulk_TW_defconfig
+++ b/arch/arm/configs/0hulk_TW_defconfig
@@ -84,6 +84,8 @@ CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIMM=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 # CONFIG_CPU_FREQ_GOV_ADAPTIVE is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_SCHED_AUTOGROUP=y
@@ -109,6 +111,7 @@ CONFIG_GENERIC_STRNCPY_FROM_USER=y
 CONFIG_GENERIC_STRNLEN_USER=y
 CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_CPU_BOOST=y
 
 # kexec hardboot support
 CONFIG_KEXEC=y
