--- a/arch/arm/configs/0hulk_TW_defconfig
+++ b/arch/arm/configs/0hulk_TW_defconfig
@@ -67,6 +67,7 @@ CONFIG_DEFAULT_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
 CONFIG_MSM_KGSL_SIMPLE_GOV=y
 CONFIG_CPU_FREQ_GOV_ABYSSPLUG=y
+CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_FREQ_GOV_ASSWAX=y
 CONFIG_CPU_FREQ_GOV_BADASS=y
 CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
